--- a/app/views/docking_spaces/new.html.erb
+++ b/app/views/docking_spaces/new.html.erb
@@ -24,7 +24,7 @@
           Vessell
         </label>
 
-        <input type="text" id="vessell_id" name="vessell_id" placeholder="Vessell" class="form-control" value="<%= @docking_space.vessell_id %>">
+        <%= select_tag(:vessell_id, options_from_collection_for_select(Vessel.all, :id, :name, @docking_space.vessell_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
