--- a/app/views/docking_spaces/index.html.erb
+++ b/app/views/docking_spaces/index.html.erb
@@ -15,7 +15,7 @@
 
       <% @docking_spaces.each do |docking_space| %>
       <tr>
-        <td><%= docking_space.vessell_id %></td>
+        <td><%= docking_space.vessell.name %></td>
         <td>
           <a href="/docking_spaces/<%= docking_space.id %>" class="btn btn-primary">Show</a>
           <a href="/docking_spaces/<%= docking_space.id %>/edit" class="btn btn-warning">Edit</a>
