--- a/app/views/docking_spaces/show.html.erb
+++ b/app/views/docking_spaces/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Vessell</dt>
-      <dd><%= @docking_space.vessell_id %></dd>
+      <dd>
+        <% if @docking_space.vessell.present? %>
+          <a href="/vessels/<%= @docking_space.vessell_id %>">
+            <%= @docking_space.vessell.name %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
